--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -234,7 +234,13 @@
       <td th:text="${pozicija.datumDo}"></td>
       <td>
         <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" class="btn btn-outline-light btn-sm">Pregled</a>
-        <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}" class="btn btn-outline-success btn-sm">Prijavi se</a>
+        <form th:action="@{/prijave/novaprijava}" method="post">
+          <input type="hidden" name="pozicijaId" th:value="${pozicija.id}"/>
+          <button type="submit" class="btn btn-outline-success btn-sm"
+                  th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
+            Prijavi se
+          </button>
+        </form>
         <a th:href="@{/pozicije/edit/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-outline-warning btn-sm">Uredi</a>
         <a th:href="@{/pozicije/delete/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-outline-danger btn-sm">Izbriši</a>
       </td>
