JobEasy Spring Boot

--- a/src/main/resources/templates/korisnik_pocetna.html
+++ b/src/main/resources/templates/korisnik_pocetna.html
@@ -3,6 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>JobEasy - Korisnik Početna </title>
+  <link rel="icon" type="image/png" th:href="@{/css/favicon.png}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
 </head>
 <body>
