--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
   <title>JobEasy - Login</title>
   <meta charset="utf-8"></meta>
-
+  <link rel="icon" type="image/png" th:href="@{/css/favicon.png}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
 </head>
