--- a/src/main/resources/templates/pozicija_pregled.html
+++ b/src/main/resources/templates/pozicija_pregled.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JobEasy - Pregled pozicije</title>
+  <link rel="icon" type="image/png" th:href="@{/css/favicon.png}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/customDugme.css}"/>
