--- a/src/main/resources/templates/prijava_na_poziciju.html
+++ b/src/main/resources/templates/prijava_na_poziciju.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>JobEasy - Prijava na poziciju</title>
+    <link rel="icon" type="image/png" th:href="@{/css/favicon.png}">
     <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"/>
 </head>
 <body>
