--- a/src/main/resources/templates/prijava_pregled.html
+++ b/src/main/resources/templates/prijava_pregled.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>JobEasy - Pregled prijava</title>
+  <link rel="icon" type="image/png" th:href="@{/css/favicon.png}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
   <link rel="stylesheet" type="text/css" th:href="@{/css/customDugme.css}"/>
