--- a/src/main/resources/templates/pozicija_pregled.html
+++ b/src/main/resources/templates/pozicija_pregled.html
@@ -83,7 +83,7 @@
 
 
   <div class="button-container">
-    <a href="/pozicije" class="btn btn-outline-warning">Natrag na listu pozicija</a>
+    <a href="/welcome" class="btn btn-outline-warning">Nazad</a>
   </div>
 </div>
 </body>
