--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -47,6 +47,7 @@
     margin: 0 auto;
     max-width: 80%;
   }
+
   .container {
     display: flex;
     flex-wrap: wrap;
@@ -179,30 +180,48 @@
 
 </div>
 
+
+
+
+
+
 <div class="container mt-5" th:if="${#authorization.expression('hasRole(''ROLE_FIRMA'')')}">
-  <div class="registration-card">
-    <div class="icon">
-      <img src="/images/cv.png" alt="Icon">
-    </div>
-    <h1><span th:text="${ukupanBrojPozicija}"></span></h1>
-    <p class="title">Lista vaših pozicija</p>
-    <a th:href="@{/pozicije}" class="more-info">Više informacija &#x2794;</a>
+  <div class="table-container">
+    <table class="table table-hover text-center">
+      <div class="d-flex justify-content-end mb-3">
+        <a class="nav-link" th:href="@{/pozicije/novapozicija}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'') or hasRole(''ROLE_FIRMA'')')}" >
+          <button class="btn btn-outline-success btn-sm mx-1" type="button"><b>Nova pozicija</b></button>
+        </a>
+      </div>
+      <thead>
+      <tr>
+        <th>Naziv pozicije</th>
+        <th>Zanimanje</th>
+        <th>Kratak opis</th>
+        <th>Datum od</th>
+        <th>Datum do</th>
+        <th>Radnja</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="pozicija : ${pozicije}">
+        <td th:text="${pozicija.nazivPozicije}"></td>
+        <td th:text="${pozicija.zanimanje.naziv}"></td>
+        <td th:text="${pozicija.kratakOpisPozicije}"></td>
+        <td th:text="${pozicija.datumOd}"></td>
+        <td th:text="${pozicija.datumDo}"></td>
+        <td class="d-flex justify-content-center">
+          <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" class="btn btn-outline-light btn-sm">Pregled</a>
+          <a th:href="@{/pozicije/edit/{id}(id=${pozicija.id})}" class="btn btn-outline-warning btn-sm">Uredi</a>
+          <a th:href="@{/pozicije/delete/{id}(id=${pozicija.id})}" class="btn btn-outline-danger btn-sm">Izbriši</a>
+        </td>
+      </tr>
+      </tbody>
+    </table>
   </div>
-
-
-  <div class="registration-card">
-    <div class="icon">
-      <img src="/images/people.png" alt="Icon">
-    </div>
-    <h1><span th:text="${ukupanBrojKorisnika}"></span></h1>
-    <p class="title">Pregled prijava</p>
-    <a th:href="@{/korisnici}" class="more-info">Više informacija &#x2794;</a>
-  </div>
-
-
-
-
 </div>
+
+
 
 
 
@@ -234,14 +253,11 @@
       <td th:text="${pozicija.kratakOpisPozicije}"></td>
       <td th:text="${pozicija.datumOd}"></td>
       <td th:text="${pozicija.datumDo}"></td>
-      <td>
+      <td class="d-flex justify-content-center gap-2">
         <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" class="btn btn-outline-light btn-sm">Pregled</a>
-        <form th:action="@{/prijave/novaprijava}" method="post">
+        <form th:action="@{/prijave/novaprijava}" method="post" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
           <input type="hidden" name="pozicijaId" th:value="${pozicija.id}"/>
-          <button type="submit" class="btn btn-outline-success btn-sm"
-                  th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
-            Prijavi se
-          </button>
+          <button type="submit" class="btn btn-outline-success btn-sm">Prijavi se</button>
         </form>
         <a th:href="@{/pozicije/edit/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-outline-warning btn-sm">Uredi</a>
         <a th:href="@{/pozicije/delete/{id}(id=${pozicija.id})}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-outline-danger btn-sm">Izbriši</a>
