--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -245,6 +245,11 @@
 
 
 <div class="table-container" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
+  <div id="alert-box" class="alert alert-dismissible fade show text-center d-none" role="alert">
+    <span id="alert-message"></span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+
   <table class="table table-hover text-center">
     <div class="d-flex justify-content-end mb-3">
       <a class="nav-link" th:href="@{/pozicije/novapozicija}" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" >
@@ -290,6 +295,16 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const params = new URLSearchParams(window.location.search);
+    if (params.has("success")) {
+      alert(params.get("success"));
+    } else if (params.has("error")) {
+      alert(params.get("error"));
+    }
+  });
+</script>
+
 </body>
 </html>
