--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -131,24 +131,29 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Desna strana navigacije -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-
-
-
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav d-flex align-items-center gap-2">
         <li class="nav-item">
-          <button class="Btn">
-
-            <div class="sign"><svg viewBox="0 0 512 512"><path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path></svg></div>
-
-            <div class="text"><a class="nav-link" style="color:white;"  th:href="@{/logout}">Odjava</a></div>
+          <a th:href="@{/korisnici/profil}" class="btn btn-info">Moj profil</a>
+        </li>
+        <li class="nav-item">
+          <button class="Btn d-flex align-items-center">
+            <div class="sign">
+              <svg viewBox="0 0 512 512">
+                <path d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"></path>
+              </svg>
+            </div>
+            <div class="text">
+              <a class="nav-link text-white" th:href="@{/logout}">Odjava</a>
+            </div>
           </button>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+
+
 <body>
 
 
@@ -277,7 +282,8 @@
       <td th:text="${pozicija.datumDo}"></td>
       <td class="d-flex justify-content-center gap-2">
         <a th:href="@{/pozicije/{id}(id=${pozicija.id})}" class="btn btn-outline-light btn-sm">Pregled</a>
-        <form th:action="@{/prijave/novaprijava}" method="post" th:if="${#authorization.expression('hasRole(''ROLE_USER'')')}">
+        <form th:action="@{/prijave/novaprijava}" method="post"
+              th:if="${#authorization.expression('hasRole(''ROLE_USER'')') and !prijavljenePozicije[pozicija.id]}">
           <input type="hidden" name="pozicijaId" th:value="${pozicija.id}"/>
           <button type="submit" class="btn btn-outline-success btn-sm">Prijavi se</button>
         </form>
